[gd_scene load_steps=10 format=3 uid="uid://ckhnkrcafhmqm"]

[ext_resource type="Script" uid="uid://crlr32uwd7qni" path="res://Scripts/ctrlz.gd" id="1_jqof2"]
[ext_resource type="Texture2D" uid="uid://cjhctnws63i54" path="res://Art/Buttons/ctrl-z keycap button-Sheet.png" id="2_jqof2"]
[ext_resource type="AudioStream" uid="uid://cosc81evi4ud" path="res://SFX/spacebar-click-keyboard-199448_iju6vpxH.mp3" id="3_62jh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pquk"]
size = Vector2(17.857143, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fb30k"]
size = Vector2(17.609125, 5.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_subnp"]
size = Vector2(17.485119, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc302"]
atlas = ExtResource("2_jqof2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_62jh6"]
atlas = ExtResource("2_jqof2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_3jls2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc302")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62jh6")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[node name="CTRLZ" type="StaticBody2D"]
position = Vector2(0, 26)
scale = Vector2(8.064, 8.064)
script = ExtResource("1_jqof2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.24801587, -0.5)
shape = SubResource("RectangleShape2D_0pquk")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.12400746, -0.5625)
shape = SubResource("RectangleShape2D_fb30k")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0.062004086, -8.5)
shape = SubResource("RectangleShape2D_subnp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.25, -3.875)
scale = Vector2(0.0917969, 0.124023)
sprite_frames = SubResource("SpriteFrames_3jls2")
animation = &"Up"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_62jh6")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
